--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,11 +3,17 @@
 {% block content %}
 
 <div class="row">
-   <div class="col-lg-12 text-center">
-       <h1 class="mt-5">Witaj w mojej bibliotece filmów</h1>
-       <p class="lead">Znajdziesz tutaj tylko najlepsze tytuły!</p>
-   </div>
-   {% for movie in movies %}
+    <div class="col-lg-12 text-center">
+        <h1 class="mt-5">Witaj w mojej bibliotece filmów</h1>
+        <p class="lead">Znajdziesz tutaj tylko najlepsze tytuły!</p>
+        <div class="float-left">
+            <a href="{{ url_for('homepage', list_type='now_playing') }}" class="btn btn-outline-info">Now Playing</a>
+            <a href="{{ url_for('homepage', list_type='upcoming') }}" class="btn btn-outline-info">Upcoming</a>
+            <a href="{{ url_for('homepage', list_type='latest') }}" class="btn btn-outline-info">Latest</a>
+            <a href="{{ url_for('homepage', list_type='top_rated') }}" class="btn btn-outline-info">Top rated</a> 
+        </div>
+    </div>
+      {% for movie in movies %}
    <div class="col-lg-3 col-md-6 mb-4">
        <div class="card h-100">
         <img src="{{ tmdb_image_url(movie.poster_path, 'w780') }}">
@@ -15,8 +21,8 @@
                <h4 class="card-title">{{ movie.title }}</h4>
            </div>
            <div class="card-footer text-center">
-               <a href="#" class="btn btn-primary">Pokaż więcej</a>
-           </div>
+               <a href="{{ url_for('movie_details', movie_id=movie.id) }}" class="btn btn-primary">Pokaż więcej</a>
+            </div>
        </div>
    </div>
    {% endfor %}
